Server now updates widget data on demand

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -17,7 +17,7 @@ html
     = render 'shared/templates'
     
     = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
-    = javascript_include_tag 'jquery.animate-enhanced.min'
+    = javascript_include_tag 'support/jquery.animate-enhanced.min'
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/backbone'
     = javascript_include_tag 'util'
