--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -35,7 +35,6 @@ body
   height: $emulator-width
 
 .main-btn
-  margin-top: 12px
   background: #5B74A8
   border: 1px solid
   border-color: #29447E #29447E #1A356E
@@ -52,7 +51,6 @@ body
     border-color: #4F6AA3
 
 .alt-btn
-  margin-top: 12px
   background: #eee
   border: 1px solid
   border-color: #999
@@ -65,3 +63,13 @@ body
     font-weight: bold
   .content:active
     background: #DDDDDD
+
+.loader
+  width: 16px
+  height: 11px
+  background: url(/images/ajax-loader.gif)
+
+.checkmark
+  width: 16px
+  height: 16px
+  background: url(/images/checkmark.png)
