--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -8,6 +8,8 @@
   float: left
   width: $widget-editor-width - 20px - 20px
   padding: 10px
+  .action-bar
+    padding-top: 12px
   .icon
     float: left
     width: 64px
@@ -20,7 +22,15 @@
   .accept-btn
     float: right
   .remove-link
-    float: right
-    margin: 16px 6px 0 0
+    float: left
+    margin: 4px 0 0 6px
   .cancel-btn
     float: left
+  .loader
+    display: none
+    float: right
+    margin: 5px 6px 0 0
+  .checkmark
+    display: none
+    float: right
+    margin: 4px 6px 0 0
