--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -60,7 +60,7 @@ body
   width: 50px
   height: 30px
   margin-top: 8px
-  background: url(/img/back-btn.png) no-repeat
+  background: url(/images/back-btn.png) no-repeat
 
 #templates
   display: none
