Drag and drop now works with database saving

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -1,5 +1,6 @@
 - content_for :sidebar do
-  p sidebar!
+  = render :partial => 'shared/sidebar', :locals => {:active => 'builder'}
+  .widgets
 
 h1 Chipotle
 #builder-container
