--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -18,10 +18,11 @@ html
     
     = javascript_include_tag 'http://code.jquery.com/jquery-1.5.1.js'
     = javascript_include_tag 'support/jquery.animate-enhanced.min'
+    = javascript_include_tag 'support/jquery-ui.dragdrop.min'
     = javascript_include_tag 'support/underscore'
     = javascript_include_tag 'support/backbone'
     = javascript_include_tag 'util'
-    = javascript_include_tag 'data-loader'
+    = render :partial => 'shared/data-loader'
     
     
     = javascript_include_tag 'widgets/mobile/base'
@@ -31,5 +32,7 @@ html
     = javascript_include_tag 'widgets/mobile/custom_page'
     = javascript_include_tag 'widgets/builder/link'
 
+    = javascript_include_tag 'views/edit-widget'
+    = javascript_include_tag 'views/sidebar'
     = javascript_include_tag 'mobile-app'
     = javascript_include_tag 'builder-app'
