--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -1,3 +1,5 @@
+<script type="text/javascript" charset="utf-8">
+
 // global variables
 window.g = {
   width: 320,
@@ -8,12 +10,14 @@ window.g = {
   password: '123123',
   appData: {
     company: "chipotle"
-  }
+  },
+  widgetsInUse: <%== @widgets_in_use.to_s %>
 };
 window.widgetClasses = {};
 
 _.templateSettings = {
-  interpolate : /\{\{(.+?)\}\}/g
+  interpolate: /\{\{([^\{].*?)\}\}/g,
+  evaluate: /\{\{\{(.+?)\}\}\}/g
 };
 
 // wdata = [
@@ -35,12 +39,17 @@ _.templateSettings = {
 
 bdata = {
   "full-website": {
+    name: "full-website",
+    wtype: 'link',
     helpText: "Add a link from your YoMobi mobile website to your full website",
     editAreaTemplate: util.getTemplate('full-website-edit-area')
   },
   
   "about-us": {
+    name: "about-us",
+    wtype: 'custom_page',
     helpText: "A page describing what your business is about.",
     editAreaTemplate: util.getTemplate('about-us-edit-area')
   }
 }
+</script>
