--- a/app/views/shared/_mobile-render.haml
+++ b/app/views/shared/_mobile-render.haml
@@ -4,7 +4,7 @@
       .logo
       .name
     .clearfix
-    .content
+    #home-widgets.content.dbx-group
   #widget.page
     .top-bar
       .back-btn
