Styling and looks

--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -40,7 +40,7 @@ bdata = {
   "full-website": {
     name: "full-website",
     wtype: 'link',
-    helpText: "Add a link from your YoMobi mobile website to your full website",
+    helpText: "Add a link from your YoMobi mobile website to your full website.",
     editAreaTemplate: util.getTemplate('full-website-edit-area')
   },
   
