--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -1,3 +1,9 @@
-.option class=status('basic',active) Basic Information
-.option class=status('config',active) Mobile Configuration
-.option class=status('builder',active) Mobile Website Bulider
+li.option.basic class=active?('basic',active)
+  .icon
+  | Basic Information
+li.option.config class=active?('config',active)
+  .icon
+  | Mobile Configuration
+li.option.builder class=active?('builder',active)
+  .icon
+  | Mobile Website Bulider
