--- a/public/stylesheets/compiled/builder.css
+++ b/public/stylesheets/compiled/builder.css
@@ -1,22 +1,33 @@
 #builder-container {
-  background: #d0d0e8;
-  padding: 0 10px; }
+  background: #edeff4;
+  border-top: 1px solid #b3b3b3;
+  padding: 20px 10px; }
 
 #builder .widget-editor {
   float: left;
   width: 390px;
   padding: 10px; }
+  #builder .widget-editor .header {
+    height: 72px; }
+    #builder .widget-editor .header .icon {
+      float: left;
+      width: 64px;
+      height: 64px;
+      background: no-repeat; }
+    #builder .widget-editor .header .help-text {
+      padding: 0 20px 0 72px;
+      margin-top: 5px; }
+  #builder .widget-editor .edit-area {
+    padding: 20px 20px; }
+    #builder .widget-editor .edit-area textarea, #builder .widget-editor .edit-area input[type=text] {
+      width: 98%;
+      font-size: 1.5em; }
+    #builder .widget-editor .edit-area textarea {
+      padding: 8px; }
+    #builder .widget-editor .edit-area input[type=text] {
+      padding: 0px 4px 8px 5px; }
   #builder .widget-editor .action-bar {
-    padding-top: 12px; }
-  #builder .widget-editor .icon {
-    float: left;
-    width: 64px;
-    height: 64px;
-    background: no-repeat; }
-  #builder .widget-editor .name {
-    float: left; }
-  #builder .widget-editor .help-text {
-    clear: both; }
+    padding: 12px 20px 0; }
   #builder .widget-editor .accept-btn {
     float: right; }
   #builder .widget-editor .remove-link {
@@ -32,3 +43,6 @@
     display: none;
     float: right;
     margin: 4px 6px 0 0; }
+  #builder .widget-editor .widget-name {
+    padding: 0 0 0 72px;
+    font-size: 2.5em; }
