--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -26,22 +26,51 @@ body
     float: left
     width: $content-width - 2
     height: 30px
-    border: 1px solid #0000ff
+    border: 1px solid #1D4088
     border-bottom: none
-    background: #dcdcff
+    background: $secondary-color
 
 #sidebar
   float: left
   width: $sidebar-width
+  ul
+    list-style: none
+    padding-left: 0
+    margin-top: 54px
+  .option
+    height: 16px
+    padding: 3px 0 2px 4px
+    clear: left
+    .icon
+      float: left
+      width: 16px
+      height: 16px
+      margin-right: 4px
+      background: url(/images/test-icons.png)
+    &:hover
+      background-color: $highlight-color
+      cursor: pointer
+  .option.basic .icon
+    background-position: 0 0
+  .option.config .icon
+    background-position: 0 -16px
+  .option.builder .icon
+    background-position: 0 -32px
+  .option.active
+    background-color: $highlight-color
 
 #content
   float: left
-  border: 1px solid #c8c8c8
+  border: 1px solid #B3B3B3
+  border-top: none
   width: $content-width - 2px
+  h1
+    padding-left: 10px
 
 #emulator
   float: left
-  border: 4px solid #000
+  border: 4px solid #1D4088
+  background: $light-bg-color
 
 #emulator.portrait
   width: $emulator-width
