--- a/public/stylesheets/sass/constants.sass
+++ b/public/stylesheets/sass/constants.sass
@@ -1,5 +1,9 @@
-$main-color: #3B5998
-$header-font-color: #fff
+$main-color:      #3B5998
+$secondary-color: #627AAD
+$light-bg-color:  #EDEFF4
+$highlight-color: #D8DFEA
+
+$header-font-color: #FFF
 
 $page-width: 960px
 $sidebar-width: 200px
