--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -46,3 +46,14 @@
   #builder .widget-editor .widget-name {
     padding: 0 0 0 72px;
     font-size: 2.5em; }
+
+#emulator .loader-overlay {
+  position: absolute;
+  width: 320px;
+  height: 480px;
+  background: url(/images/ui/overlay.png); }
+  #emulator .loader-overlay .loader {
+    width: 64px;
+    height: 64px;
+    margin: 210px auto;
+    background: url(/images/ui/ajax-loader-large.gif); }
