--- a/public/stylesheets/compiled/app.css
+++ b/public/stylesheets/compiled/app.css
@@ -65,6 +65,13 @@ body {
   #content h1 {
     padding-left: 10px; }
 
+#emulator-wrapper {
+  float: left;
+  width: 320px;
+  height: 480px;
+  padding: 133px 28px 133px 40px;
+  background: url(/images/iphone.png); }
+
 #emulator {
   float: left;
   border: 4px solid #1d4088;
