--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -67,6 +67,13 @@ body
   h1
     padding-left: 10px
 
+#emulator-wrapper
+  float: left
+  width: $emulator-width
+  height: 480px
+  padding: 133px 28px 133px 40px
+  background: url(/images/iphone.png)
+
 #emulator
   float: left
   border: 4px solid #1D4088
