--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -49,3 +49,15 @@
     padding: 0 0 0 72px
     font-size: 2.5em
 
+#emulator .loader-overlay
+  position: absolute
+  width: 320px
+  height: 480px
+  background: url(/images/ui/overlay.png)
+  .loader
+    width: 64px
+    height: 64px
+    margin: 210px auto
+    background: url(/images/ui/ajax-loader-large.gif)
+  
+
