Added drophover layover

--- a/public/stylesheets/sass/builder.sass
+++ b/public/stylesheets/sass/builder.sass
@@ -54,10 +54,28 @@
   width: 320px
   height: 480px
   background: url(/images/ui/overlay.png)
-  .loader
+  .icon
     width: 64px
     height: 64px
     margin: 210px auto
     background: url(/images/ui/ajax-loader-large.gif)
-  
+
+#emulator .drophover-overlay
+  display: none
+  position: absolute
+  width: 320px
+  height: 480px
+  background: url(/images/ui/overlay.png)
+  .icon
+    width: 128px
+    height: 128px
+    margin: 170px auto 0
+    background: url(/images/ui/drophover.png)
+  .text
+    margin: 8px 0
+    color: #fff
+    text-align: center
+    font-size: 2em
+#emulator.drophover .drophover-overlay
+  display: block
 
