--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -10,7 +10,10 @@ h1 Chipotle
       #mobile-container
         = render 'shared/mobile-render'
         .loader-overlay
-          .loader
+          .icon
+        .drophover-overlay
+          .icon
+          .text Add to Mobile Site
     .widget-editor
       h1 Click a widget icon in the Emulator to begin editing
       h2 OR
