--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -46,7 +46,7 @@
   
   script.phone-page(type="text/template")
     p Call us at:
-    h1 {{ content }}
+    h1 {{ phone }}
 
   / =====================
   / = Widget Edit Pages =
