--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -44,6 +44,23 @@ body
   margin-top: 8px
   background: url(/images/back-btn.png) no-repeat
 
+.home-icon
+  float: left
+  width: 75px
+  height: 115px
+  .inner
+    padding: 7.5px 5.5px 7.5px 5.5px
+  .icon
+    width: 64px
+    height: 64px
+    background: no-repeat
+    &:hover
+      cursor: pointer
+  .title
+    width: 64px
+    text-align: center
+    font-size: 14px
+
 #templates
   display: none
 
