--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -4,6 +4,7 @@
 body
   font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
   font-size: 11px
+  overflow-y: scroll
 
 #page-container
   width: $page-width
