--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,7 +1,8 @@
 @import url(dbx.css);
 body {
   font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
-  font-size: 11px; }
+  font-size: 11px;
+  overflow-y: scroll; }
 
 #page-container {
   width: 960px;
