Added leave-a-message widget. Email only works on development env for now

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -2,7 +2,7 @@
 html
   head
     title YoMobi
-    = stylesheet_link_tag 'compiled/builder-app'
+    = stylesheet_link_tag 'builder-app'
   body
     #global-container
       #header
