--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -3,7 +3,7 @@ html
   head
     title YoMobi
     = render 'shared/iphone-meta.html'
-    = stylesheet_link_tag 'compiled/mobile'
+    = stylesheet_link_tag 'mobile'
   body
     #mobile-container
       = yield
