--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -66,3 +66,11 @@ body
 
 .clearfix
   clear: both
+
+/////////////////////////////
+// Widget Specific Styling //
+/////////////////////////////
+
+#widget .content
+  textarea[name="msg_content"]
+    width: 95%
