--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -71,6 +71,15 @@ body
 // Widget Specific Styling //
 /////////////////////////////
 
-#widget .content
+#widget .content.leave_msg
   textarea[name="msg_content"]
     width: 95%
+
+#widget .content.hours
+  .closed
+    color: #aa0000
+  .open
+    color: #007700
+  .all-day
+    color: #000099
+
