--- a/public/stylesheets/sass/mobile.sass
+++ b/public/stylesheets/sass/mobile.sass
@@ -2,6 +2,7 @@ $dynamic-width: 320px
 $color-topbar: #3B5998
 
 body
+  font-family: 'lucida grande', tahoma, verdana, arial, sans-serif
   margin: 0
   padding: 0
 
