Fixed template parsing bug

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -100,9 +100,9 @@
         .row
           .hour-wrap class=".all-day-{{ _maybe.#{day}AllDay }}"
             label From:
-            input.hour.from type="text" name="#{day}_from" value="{{ #{day}FromHour }}"
+            input.hour.from type="text" name="#{day}_from" value="{{ _maybe.#{day}FromHour }}"
             label To:
-            input.hour.to type="text" name="#{day}_to" value="{{ #{day}ToHour }}"
+            input.hour.to type="text" name="#{day}_to" value="{{ _.mabye.#{day}ToHour }}"
         .all-day-label class=".all-day-{{ _maybe.#{day}AllDay }}"
           span Open All Day
         .add-time
